--- a/benefits.html
+++ b/benefits.html
@@ -19,6 +19,7 @@
                     <!-- Hamburger icon -->
                 </div>
                 <ul class="navbar-menu">
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="mission.html">Mission</a></li>
                     <li><a href="how-it-works.html">How It Works</a></li>
                     <li><a href="benefits.html">Benefits</a></li>
@@ -27,35 +28,39 @@
             </nav>
             <div style="height: 100px"></div>
             <h1>Benefits</h1>
-            <ol>
-                <li>
-                    Works without internet connection.
-                </li>
-                <li>
-                    Excludes lawyers, executors, and other trusted third-parties.
-                </li>
-                <li>
-                    Consistent with the Bitcoin ethos.
-                </li>
-            </ol>
-            <h1>Things to consider...</h1>
-            <ol>
-                <li>
-                    Legacy does NOT store any data.
-                </li>
-                <li>
-                    You need BOTH keys and the encrypted seed phrase to decrypt.
-                </li>
-                <li>
-                    If any of these pieces of information are lost, the Bitcoin is irretrievable.
-                </li>
-                <li>
-                    You have sole responsibility for maintaining your keys and encrypted seed phrase.
-                </li>
-                <li>
-                    A working copy of Legacy is also necessary to decrypt the seed phrase.
-                </li>
-            </ol>
+            <div class="container">
+                <ol>
+                    <li>
+                        Works without internet connection.
+                    </li>
+                    <li>
+                        Excludes lawyers, executors, and other trusted third-parties.
+                    </li>
+                    <li>
+                        Consistent with the Bitcoin ethos.
+                    </li>
+                </ol>
+            </div>
+            <h2>Things to consider...</h2>
+            <div class="container">
+                <ol>
+                    <li>
+                        Legacy does NOT store any data.
+                    </li>
+                    <li>
+                        You need BOTH keys and the encrypted seed phrase to decrypt.
+                    </li>
+                    <li>
+                        If any of these pieces of information are lost, the Bitcoin is irretrievable.
+                    </li>
+                    <li>
+                        You have sole responsibility for maintaining your keys and encrypted seed phrase.
+                    </li>
+                    <li>
+                        A working copy of Legacy is also necessary to decrypt the seed phrase.
+                    </li>
+                </ol>
+            </div>
             <div style="height: 100vh"></div>
             <footer>
                 Legacy - Encryption and Consulting. All Rights Reserved 2025.
