--- a/mission.html
+++ b/mission.html
@@ -19,6 +19,7 @@
                     <!-- Hamburger icon -->
                 </div>
                 <ul class="navbar-menu">
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="mission.html">Mission</a></li>
                     <li><a href="how-it-works.html">How It Works</a></li>
                     <li><a href="benefits.html">Benefits</a></li>
@@ -27,9 +28,15 @@
             </nav>
             <div style="height: 100px"></div>
             <h1>Mission</h1>
-            <p>
-                Our mission is to make Bitcoin inheritance simple, secure and P2P.
-            </p>
+            <div class="container">
+                <p>
+                    Our mission is to make Bitcoin inheritance simple, secure and P2P.
+                </p>
+                <p>
+                    We believe encryption can eliminate the need for the involvment of
+                    lawyers, executors and other trusted third parties.
+                </p>
+            </div>
 
             <div style="height: 100vh"></div>
             <footer>
