--- a/contact.html
+++ b/contact.html
@@ -19,6 +19,7 @@
                     <!-- Hamburger icon -->
                 </div>
                 <ul class="navbar-menu">
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="mission.html">Mission</a></li>
                     <li><a href="how-it-works.html">How It Works</a></li>
                     <li><a href="benefits.html">Benefits</a></li>
