--- a/how-it-works.html
+++ b/how-it-works.html
@@ -20,6 +20,7 @@
                 </div>
                 <ul class="navbar-menu">
                     <ul class="navbar-menu">
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="mission.html">Mission</a></li>
                         <li><a href="how-it-works.html">How It Works</a></li>
                         <li><a href="benefits.html">Benefits</a></li>
@@ -56,11 +57,11 @@
                 </ol>
             </div>
             <div class="button-container">
-                <a href="../Legacy-encrypt.html" class="learn-more-button">
+                <a href="Legacy-encrypt.html" class="learn-more-button">
                     Try It Out
                 </a>
             </div>
-            <div style="height: 100vh"></div>
+            <div style="height: 50vh"></div>
             <footer>
                 Legacy - Encryption and Consulting. All Rights Reserved 2025.
             </footer>
