--- a/benefits.html
+++ b/benefits.html
@@ -27,7 +27,7 @@
                 </ul>
             </nav>
             <div style="height: 100px"></div>
-            <h1>Benefits</h1>
+            <h1 style="margin-bottom: 30px">Benefits</h1>
             <div class="container">
                 <ol>
                     <li>
@@ -41,7 +41,7 @@
                     </li>
                 </ol>
             </div>
-            <h2>Things to consider...</h2>
+            <h2 style="margin-bottom: 30px">Things to consider...</h2>
             <div class="container">
                 <ol>
                     <li>
