--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
             </nav>
             <div style="height: 100px"></div>
             <h1>Contact</h1>
-            <p>Email: ericscalibur@gmail.com</p>
+            <p>Email: ericscalibur@protonmail.com</p>
 
             <div style="height: 100vh"></div>
             <footer>
