--- a/Legacy-encrypt.html
+++ b/Legacy-encrypt.html
@@ -145,50 +145,9 @@
             <section style="align-items: center; justify-content: center">
                 <ul>
                     <li>
-                        This tool is inteded for Bitcoin holders to secure the
-                        timely inheretance of their Bitcoin to their
-                        beneficiaries.
-                    </li>
-                    <li>
-                        This program will work without an internet connection.
-                    </li>
-                    <li>
-                        Keys are chosen by the Benefactor and Beneficiaries
-                        independently, or solely by the Benefactor.
-                    </li>
-                    <li>
-                        Keys and seed phrase should be entered in ALL LOWERCASE,
-                        NO SPACES, NO SPECIAL CHARACTERS, NO NUMBERS.
-                    </li>
-                    <li>Don't choose keys that can be easily guessed.</li>
-                    <li>
-                        Once the Benefactor generates the Keys and Encrypted
-                        Seed Phrase, the Beneficiary Key is given to the
-                        Beneficiary to keep safe until the DeadMan Switch is
-                        activated.
-                    </li>
-                    <li>
-                        The Benefactor Key and Encrypted Seed Phrase are sent to
-                        the Beneficiary via DeadMan Switch email.
-                    </li>
-                    <li>
-                        This tool can be used to generate as many key pairs as
-                        you like associated with different seed phrases or
-                        single seed phrase.
-                    </li>
-                    <li>
-                        Anyone with access to this page can create key pairs.
-                        Anyone with access to the decrypt page can decrypt a
-                        seed phrase using their keys.
-                    </li>
-                    <li>
-                        To <a href="Legacy-decrypt.html">DECRYPT</a>, you must
-                        have BOTH keys and the Encrypted Seed Phrase.
-                    </li>
-                    <li>
-                        There is no mechanism by which your keys or encrypted
-                        seed pharse can be recovered if lost. This program does
-                        not store any user input.
+                        This online version is for demonstration purposes only.
+                        DO NOT ENTER YOUR ACTUAL SEED PHRASE INTO THIS
+                        DEMONSTRATION.
                     </li>
                     <li>
                         Please check the expected functionality of your keys
