--- a/Legacy-encrypt.html
+++ b/Legacy-encrypt.html
@@ -145,6 +145,12 @@
             <section style="align-items: center; justify-content: center">
                 <ul>
                     <li>
+                        Please read the
+                        <a href="how-it-works.html">HOW-IT-WORKS</a> page and
+                        the <a href="benefits.html">BENEFITS</a> page before
+                        using this
+                    </li>
+                    <li>
                         This online version is for demonstration purposes only.
                         DO NOT ENTER YOUR ACTUAL SEED PHRASE INTO THIS
                         DEMONSTRATION.
