--- a/Legacy-decrypt.html
+++ b/Legacy-decrypt.html
@@ -183,6 +183,14 @@
                 Legacy - Encryption and Consulting. All Rights Reserved 2025.
             </footer>
         </div>
+        <script>
+            const toggle = document.getElementById("navbar-toggle");
+            const menu = document.querySelector(".navbar-menu");
+
+            toggle.addEventListener("click", function () {
+                menu.classList.toggle("active"); // Toggle the 'active' class
+            });
+        </script>
 
         <script>
             // Function to compute SHA-256 hash
