--- a/Legacy-decrypt.html
+++ b/Legacy-decrypt.html
@@ -137,7 +137,7 @@
             <div style="height: 70vh"></div>
             <h1>Legacy</h1>
             <div style="height: 5vh"></div>
-            <h3>2-Key Bitcoin Seed Phrase Decryption</h3>
+            <h3>2-Key Seed Phrase Decryption</h3>
             <div style="height: 5vh"></div>
             <div style="width: 80%; margin: auto">
                 <p>
@@ -179,6 +179,12 @@
                 <p id="decryptedText"></p>
             </div>
             <div style="height: 10vh"></div>
+            <h2>Donations</h2>
+            <p>Legacy is free and open source. Please consider donating.</p>
+            <div class="image-container">
+                <img src="blinkQR.png" alt="qr-code" />
+            </div>
+            <p>Lightning: ericscalibur@blink.sv</p>
             <footer>
                 Legacy - Encryption and Consulting. All Rights Reserved 2025.
             </footer>
