--- a/Legacy-encrypt.html
+++ b/Legacy-encrypt.html
@@ -137,26 +137,25 @@
             <div style="height: 70vh"></div>
             <h1>Legacy</h1>
             <div style="height: 5vh"></div>
-            <h3>2-Key Bitcoin Seed Phrase Encryption</h3>
+            <h3>2-Key Seed Phrase Encryption</h3>
             <div style="height: 5vh"></div>
         </header>
         <div class="container">
             <h2>Instructions</h2>
             <section style="align-items: center; justify-content: center">
-                <ul>
+                <ul></ul>
+                    <li>
+                        DO NOT ENTER YOUR ACTUAL SEED PHRASE. This online version is for
+                        demonstration purposes only.
+                    </li>
                     <li>
                         Please read the
                         <a href="how-it-works.html">HOW-IT-WORKS</a> page and
                         the <a href="benefits.html">BENEFITS</a> page before
-                        using this
+                        using
                     </li>
                     <li>
-                        This online version is for demonstration purposes only.
-                        DO NOT ENTER YOUR ACTUAL SEED PHRASE INTO THIS
-                        DEMONSTRATION.
-                    </li>
-                    <li>
-                        Please check the expected functionality of your keys
+                        Check the expected functionality of your keys
                         using the
                         <a href="Legacy-decrypt.html">DECRYPT</a> page.
                     </li>
@@ -177,20 +176,20 @@
                         class="toggle-visibility"
                         onclick="toggleVisibility('key1', this)"
                     >
+                        <!-- Top eyelid -->
                         <span
                             class="eyelid top"
                             style="transform: rotate(90deg)"
                             >(</span
                         >
-                        <!-- Top eyelid -->
-                        <span class="iris">0</span>
                         <!-- Iris -->
+                        <span class="iris">0</span>
+                        <!-- Bottom eyelid -->
                         <span
                             class="eyelid bottom"
                             style="transform: rotate(90deg)"
                             >)</span
                         >
-                        <!-- Bottom eyelid -->
                     </span>
                 </div>
 
