--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,17 @@
             header {
                 background-image: url("background.png");
             }
+            h2 { margin-top: 50px;}
+            img {
+                width: 60%;
+                height: auto;
+                margin: auto;
+                margin-top: 50px;
+            }
+            .image-container {
+                display: flex;
+                align-items: center;
+            }
         </style>
     </head>
     <body>
@@ -27,12 +38,19 @@
                 </ul>
             </nav>
             <div style="height: 200px"></div>
-            <h1>Contact</h1>
-            <p>Email: ericscalibur@protonmail.com</p>
-
-            <div style="height: 100vh"></div>
+            <div class="container">
+                <h1>Contact</h1>
+                <p>Email: ericscalibur@protonmail.com</p>
+                <h2>Donations</h2>
+                <p>Legacy is free and open source. Please consider donating.</p>
+                <div class="image-container">
+                    <img src="blinkQR.png" alt="qr-code">
+                </div>
+                <p>Lightning: ericscalibur@blink.sv</p>
+            </div>
+            <div style="height: 20vh"></div>
             <footer>
-                Legacy - Encryption and Consulting. All Rights Reserved 2025.
+                Legacy - Encryption and Consulting. <br>All Rights Reserved 2025.
             </footer>
         </div>
 
