--- a/how-it-works.html
+++ b/how-it-works.html
@@ -59,9 +59,9 @@
                     Try It Out
                 </a>
             </div>
-            <div style="height: 50vh"></div>
+            <div style="height: 20vh"></div>
             <footer>
-                Legacy - Encryption and Consulting. All Rights Reserved 2025.
+                Legacy - Encryption and Consulting. <br>All Rights Reserved 2025.
             </footer>
         </div>
 
