--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
             </div>
             <div style="height: 80px"></div>
             <footer>
-                Legacy - Encryption and Consulting. All Rights Reserved 2025.
+                Legacy - Encryption and Consulting. <br />All Rights Reserved
+                2025.
             </footer>
         </div>
 
