--- a/mission.html
+++ b/mission.html
@@ -40,7 +40,7 @@
 
             <div style="height: 100vh"></div>
             <footer>
-                Legacy - Encryption and Consulting. All Rights Reserved 2025.
+                Legacy - Encryption and Consulting. <br>All Rights Reserved 2025.
             </footer>
         </div>
 
