--- a/benefits.html
+++ b/benefits.html
@@ -63,7 +63,7 @@
             </div>
             <div style="height: 20vh"></div>
             <footer>
-                Legacy - Encryption and Consulting. All Rights Reserved 2025.
+                Legacy - Encryption and Consulting. <br>All Rights Reserved 2025.
             </footer>
         </div>
 
