--- a/Legacy-decrypt.html
+++ b/Legacy-decrypt.html
@@ -117,6 +117,19 @@
             ul li {
                 margin-top: 10px;
             }
+            h2 {
+                margin-top: 50px;
+            }
+            img {
+                width: 60%;
+                height: auto;
+                margin: auto;
+                margin-top: 50px;
+            }
+            .image-container {
+                display: flex;
+                align-items: center;
+            }
         </style>
     </head>
     <body>
