--- a/Legacy-encrypt.html
+++ b/Legacy-encrypt.html
@@ -143,10 +143,10 @@
         <div class="container">
             <h2>Instructions</h2>
             <section style="align-items: center; justify-content: center">
-                <ul></ul>
+                <ul>
                     <li>
-                        DO NOT ENTER YOUR ACTUAL SEED PHRASE. This online version is for
-                        demonstration purposes only.
+                        DO NOT ENTER YOUR ACTUAL SEED PHRASE. This online
+                        version is for demonstration purposes only.
                     </li>
                     <li>
                         Please read the
@@ -155,9 +155,12 @@
                         using
                     </li>
                     <li>
-                        Check the expected functionality of your keys
-                        using the
+                        Check the expected functionality of your keys using the
                         <a href="Legacy-decrypt.html">DECRYPT</a> page.
+                    </li>
+                    <li>
+                        Keys and seed phrase must be entered with all lowercase,
+                        no caps, no spaces, no numbers, no special characters.
                     </li>
                 </ul>
             </section>
