--- a/benefits.html
+++ b/benefits.html
@@ -30,42 +30,42 @@
             <h1 style="margin-bottom: 30px">Benefits</h1>
             <div class="container">
                 <ol>
+                    <li>Works without internet connection.</li>
                     <li>
-                        Works without internet connection.
+                        Excludes lawyers, executors, and other trusted
+                        third-parties.
                     </li>
-                    <li>
-                        Excludes lawyers, executors, and other trusted third-parties.
-                    </li>
-                    <li>
-                        Consistent with the Bitcoin ethos.
-                    </li>
+                    <li>Consistent with the Bitcoin ethos.</li>
                 </ol>
             </div>
             <h2 style="margin-bottom: 30px">Things to consider...</h2>
             <div class="container">
                 <ol>
+                    <li>Legacy does NOT store any data.</li>
                     <li>
-                        Legacy does NOT store any data.
+                        You need BOTH keys and the encrypted seed phrase to
+                        decrypt.
                     </li>
                     <li>
-                        You need BOTH keys and the encrypted seed phrase to decrypt.
+                        If any of these pieces of information are lost, the
+                        Bitcoin is irretrievable.
                     </li>
                     <li>
-                        If any of these pieces of information are lost, the Bitcoin is irretrievable.
+                        You have sole responsibility for maintaining your keys
+                        and encrypted seed phrase.
                     </li>
                     <li>
-                        You have sole responsibility for maintaining your keys and encrypted seed phrase.
-                    </li>
-                    <li>
-                        A working copy of Legacy is also necessary to decrypt the seed phrase.
+                        A working copy of Legacy is also necessary to decrypt
+                        the seed phrase.
                     </li>
                 </ol>
             </div>
             <div style="height: 20vh"></div>
             <footer>
-                Legacy - Encryption and Consulting. <br>All Rights Reserved 2025.
+                Legacy - Encryption and Consulting. <br />All Rights Reserved
+                2025.
             </footer>
-        </div>
+        </header>
 
         <!-- JavaScript for toggling navbar -->
         <script>
