--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,9 @@
             header {
                 background-image: url("background.png");
             }
-            h2 { margin-top: 50px;}
+            h2 {
+                margin-top: 50px;
+            }
             img {
                 width: 60%;
                 height: auto;
@@ -44,15 +46,16 @@
                 <h2>Donations</h2>
                 <p>Legacy is free and open source. Please consider donating.</p>
                 <div class="image-container">
-                    <img src="blinkQR.png" alt="qr-code">
+                    <img src="blinkQR.png" alt="qr-code" />
                 </div>
                 <p>Lightning: ericscalibur@blink.sv</p>
             </div>
             <div style="height: 20vh"></div>
             <footer>
-                Legacy - Encryption and Consulting. <br>All Rights Reserved 2025.
+                Legacy - Encryption and Consulting. <br />All Rights Reserved
+                2025.
             </footer>
-        </div>
+        </header>
 
         <!-- JavaScript for toggling navbar -->
         <script>
