--- a/how-it-works.html
+++ b/how-it-works.html
@@ -31,26 +31,26 @@
             <div class="container">
                 <ol style="margin-top: 50px">
                     <li>
-                        The Benefactor uses Legacy's encryption system to generate a key pair and
-                        encrypt their seed phrase.
+                        The Benefactor uses Legacy's encryption system to
+                        generate a key pair and encrypt their seed phrase.
+                    </li>
+                    <li>One key is given to the Benefiary to keep safe.</li>
+                    <li>
+                        The other key is kept by the Benefactor with the
+                        Encrypted Seed Phrase.
                     </li>
                     <li>
-                        One key is given to the Benefiary to keep safe.
+                        The Benefactor sets up a Deadman Switch whereby, upon
+                        the death of the Benefactor, an email is sent to the
+                        Beneficiary.
                     </li>
                     <li>
-                        The other key is kept by the Benefactor with the Encrypted Seed Phrase.
+                        The email contains the Benefactor's key and the
+                        Encrypted Seed Phrase.
                     </li>
                     <li>
-                        The Benefactor sets up a Deadman Switch whereby, upon the death of the
-                        Benefactor, an email is sent to the Beneficiary.
-
-                    </li>
-                    <li>
-                        The email contains the Benefactor's key and the Encrypted Seed Phrase.
-                    </li>
-                    <li>
-                        Finally, the Beneficiary uses both keys to decrypt the seed phrase and recover
-                        the Bitcoin.
+                        Finally, the Beneficiary uses both keys to decrypt the
+                        seed phrase and recover the Bitcoin.
                     </li>
                 </ol>
             </div>
@@ -61,9 +61,10 @@
             </div>
             <div style="height: 20vh"></div>
             <footer>
-                Legacy - Encryption and Consulting. <br>All Rights Reserved 2025.
+                Legacy - Encryption and Consulting. <br />All Rights Reserved
+                2025.
             </footer>
-        </div>
+        </header>
 
         <!-- JavaScript for toggling navbar -->
         <script>
