--- a/mission.html
+++ b/mission.html
@@ -30,19 +30,22 @@
             <h1>Mission</h1>
             <div class="container">
                 <p>
-                    Our mission is to make Bitcoin inheritance simple, secure and P2P.
+                    Our mission is to make Bitcoin inheritance simple, secure
+                    and P2P.
                 </p>
                 <p>
-                    We believe encryption can eliminate the need for the involvment of
-                    lawyers, executors and other trusted third parties.
+                    We believe encryption can eliminate the need for the
+                    involvment of lawyers, executors and other trusted third
+                    parties.
                 </p>
             </div>
 
             <div style="height: 100vh"></div>
             <footer>
-                Legacy - Encryption and Consulting. <br>All Rights Reserved 2025.
+                Legacy - Encryption and Consulting. <br />All Rights Reserved
+                2025.
             </footer>
-        </div>
+        </header>
 
         <!-- JavaScript for toggling navbar -->
         <script>
