--- a/Legacy-decrypt.html
+++ b/Legacy-decrypt.html
@@ -194,10 +194,13 @@
             <div style="height: 10vh"></div>
             <h2>Donations</h2>
             <p>Legacy is free and open source. Please consider donating.</p>
+            <div style="height: 5vh"></div>
             <div class="image-container">
                 <img src="blinkQR.png" alt="qr-code" />
             </div>
+            <div style="height: 5vh"></div>
             <p>Lightning: ericscalibur@blink.sv</p>
+            <div style="height: 10vh"></div>
             <footer>
                 Legacy - Encryption and Consulting. All Rights Reserved 2025.
             </footer>
