--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
             <div style="height: 200px"></div>
             <div class="container">
                 <h1>Contact</h1>
-                <p>Email: ericscalibur@protonmail.com</p>
+                <p>Email: <br />ericscalibur@protonmail.com</p>
                 <h2>Donations</h2>
                 <p>Legacy is free and open source. Please consider donating.</p>
                 <div class="image-container">
