--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
                 <div class="image-container">
                     <img src="blinkQR.png" alt="qr-code" />
                 </div>
-                <p>Lightning: ericscalibur@blink.sv</p>
+                <p>Lightning: <br />ericscalibur@blink.sv</p>
             </div>
             <div style="height: 20vh"></div>
             <footer>
