--- a/how-it-works.html
+++ b/how-it-works.html
@@ -34,7 +34,7 @@
                         The Benefactor uses Legacy's encryption system to
                         generate a key pair and encrypt their seed phrase.
                     </li>
-                    <li>One key is given to the Benefiary to keep safe.</li>
+                    <li>One key is given to the Beneficiary to keep safe.</li>
                     <li>
                         The other key is kept by the Benefactor with the
                         Encrypted Seed Phrase.
